@@ -1,3 +1,7 @@
+2006-07-31  Bjørn Lindeijer  <bjorn@lindeijer.nl>
+
+	* src/net/network.cpp: Corrected an off by one error in packet size.
+
 2006-07-30  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/openglgraphics.cpp, src/game.cpp, src/main.cpp,
